[NF] Added server initialization progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="ping">%1$s ms</string>
     <string name="download_speed">%1$s Mbps</string>
+    <string name="server_initialization"> Initialization of testing server</string>
 </resources>
